// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot custom 1`] = `
<del
  class="yozora-delete custom-class"
  style="color:orange"
>
  some text1
  <span>
    some text2
  </span>
</del>
`;

exports[`snapshot default 1`] = `
<del
  class="yozora-delete"
>
  some text1
  <span>
    some text2
  </span>
</del>
`;
